Provide quiz set result fetching
